[package]
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rise-and-shine"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
stm32f1xx-hal = { version = "0.7.0", features = ["stm32f103"] }
embedded-hal = "0.2"
nb = "1.0"
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
chrono = { version = "0.4", default-features = false }

#[build-dependencies]
#vergen = "5.1.15"

# this lets you use `cargo fix`!
[[bin]]
name = "rise-and-shine"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
